--- a/authordetail.html
+++ b/authordetail.html
@@ -16,175 +16,13 @@
 </head>
 
 <body class="theme-light-blue">
-    <div class="page-loader-wrapper">
-        <div class="loader">
-            <div class="preloader">
-                <div class="spinner-layer pl-light-blue">
-                    <div class="circle-clipper left">
-                        <div class="circle"></div>
-                    </div>
-                    <div class="circle-clipper right">
-                        <div class="circle"></div>
-                    </div>
-                </div>
-            </div>
-            <p>Please wait...</p>
-        </div>
-    </div>
-    <div class="overlay"></div>
-    <div class="search-bar">
-        <div class="search-icon">
-            <i class="material-icons">search</i>
-        </div>
-        <input type="text" placeholder="Search Titles & Authors">
-        <div class="close-search">
-            <i class="material-icons">close</i>
-        </div>
-    </div>
-    <nav class="navbar">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a href="#" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"></a>
-                <a href="#" class="bars"></a>
-                <a href="#" class="lnkHome"><img src="logo.png" alt="Logo" /></a>
-            </div>
-            <div class="collapse navbar-collapse" id="navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#" style="font-size: 24px; font-weight: bolder;">BYGOZ E-LEARNING PRIVATE LIMITED</a>
-                    </li>
-                    <li>
-                        <a href="#" class="lnkHome" data-close="true">
-                            <i class="material-icons">home</i>
-                        </a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#" class="lnkLogin">
-                            <i class="material-icons">shopping_cart</i>
-                            <span>Bygoz Store</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <section>
-        <aside id="leftsidebar" class="sidebar">
-            <div class="menu">
-                <ul class="list">
-                    <li>
-                        <a href="#" class="lnkHome">
-                            <i class="material-icons">home</i>
-                            <span>HOME</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkLibrary">
-                            <i class="material-icons">account_balance</i>
-                            <span>LIBRARY</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkStore">
-                            <i class="material-icons">store</i>
-                            <span>STORE</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkPurchase">
-                            <i class="material-icons">attach_money</i>
-                            <span>PURCHASE</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkCart">
-                            <i class="material-icons">add_shopping_cart</i>
-                            <span>CART</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkAuthors">
-                            <i class="material-icons">contacts</i>
-                            <span>AUTHORS</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkFavouriteBooks">
-                            <i class="material-icons">bookmarks</i>
-                            <span>FAVOURITE BOOK</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkTranscationHistory">
-                            <i class="material-icons">account_balance_wallet</i>
-                            <span>TRANSCATION HISTORY</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkMyProfile">
-                            <i class="material-icons">account_box</i>
-                            <span>MY PROFILE</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkChangePassword">
-                            <i class="material-icons">settings_applications</i>
-                            <span>CHANGE PASSWORD</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkSellWithUs">
-                            <i class="material-icons">shopping_cart</i>
-                            <span>SELL WITH US</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkLogout">
-                            <i class="material-icons">lock</i>
-                            <span>LOGOUT</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-                </ul>
-            </div>
-        </aside>
-    </section>
+    <div class="masterPage"> </div>
     <section class="content">
         <div class="container-fluid">
 
             <div class="row clearfix">
-                <div class="col-md-12">
-                    <div class="card">
-                        <div class="body">
-                            <div class="row bindDashboardData" id="loadBookDetail">
+                <div class="col-md-12 bindAuthorDetail">
 
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
 
@@ -206,42 +44,83 @@
     <script src="THEME/js/custom.js"></script>
 
     <script>
+        var lstBooks = [];
+
         var authorDetail = JSON.parse(window.localStorage.getItem("authorData"));
         $.post(apiUrl + "book_detail", {
             author_id: authorDetail.author_id
-            }, function(data) { 
-                if (data.status === true) {
-                    lstBooks = JSON.parse(window.localStorage.getItem("lstBooks")) || [];
-                    var strBookList = '';
-                    var arrBookList = data.book_list;
-                    strBookList = '<div class="card"><div class="body"><div class="row"><div class="col-md-12">';
-                    strBookList = strBookList + '<h4 style="color: #03A9F4;">BOOK LIST</h4></div>';
+        }, function(data) {
+            if (data.status === true) {
+                lstBooks = JSON.parse(window.localStorage.getItem("lstBooks")) || [];
+                var strBookList = '';
+                var arrBookList = data.book_list;
+                strBookList = '<div class="card"><div class="body"><div class="row"><div class="col-md-12">';
+                strBookList = strBookList + '<h4 style="color: #03A9F4;">BOOK LIST</h4></div>';
 
-                    for (i = 0; i < arrBookList.length; i++) {
-                        var filtered = lstBooks.filter(function(value) {
-                            return value == arrBookList[i].book_id;
-                        });
+                for (i = 0; i < arrBookList.length; i++) {
+                    var filtered = lstBooks.filter(function(value) {
+                        return value == arrBookList[i].book_id;
+                    });
 
-                        strBookList = strBookList + '<div class="col-md-3"><div class="thumbnail">';
-                        strBookList = strBookList + '<img src="' + frontCoverUrl + arrBookList[i].front_cover + '" style="height: 300px; width: 250px;" />';
-                        strBookList = strBookList + '<div class="caption">';
-                        strBookList = strBookList + '<h3>' + arrBookList[i].name + '</h3>';
+                    strBookList = strBookList + '<div class="col-md-3"><div class="thumbnail">';
+                    strBookList = strBookList + '<img src="' + frontCoverUrl + arrBookList[i].front_cover + '" style="height: 300px; width: 250px;" />';
+                    strBookList = strBookList + '<div class="caption">';
+                    strBookList = strBookList + '<h3>' + arrBookList[i].name + '</h3>';
 
-                        if (filtered.length > 0) {
-                            strBookList = strBookList + '<p><button onclick="openPDf(\'' + arrBookList[i].file_path + '\')" class="btn btn-success">VIEW</button>';
-                        } else {
-                            strBookList = strBookList + '<p><button onclick="download(' + arrBookList[i].book_id + ')" class="btn btn-success">DOWNLOAD</button>';
-                        }
-
-                        strBookList = strBookList + ' <button onclick="#" class="btn btn-primary">BUY NOW</button></p>';
-                        strBookList = strBookList + '</div></div></div>';
+                    if (filtered.length > 0) {
+                        strBookList = strBookList + '<p><button onclick="openPDf(\'' + arrBookList[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                    } else {
+                        strBookList = strBookList + '<p><button onclick="download(' + arrBookList[i].book_id + ')" class="btn btn-success">DOWNLOAD</button>';
                     }
 
+                    strBookList = strBookList + ' <button onclick="bookdetail(' + arrBookList[i].book_id + ')" class="btn btn-primary">BUY NOW</button></p>';
                     strBookList = strBookList + '</div></div></div>';
-                    $(".bindDashboardData").append(strBookList);
                 }
+
+                strBookList = strBookList + '</div></div></div>';
+                $(".bindAuthorDetail").append(strBookList);
+            }
+        });
+
+        function bookdetail(id) {
+            window.localStorage.removeItem("bookID");
+            window.localStorage.setItem("bookID", id);
+            window.location.href = "bookdetail.html";
+        }
+
+        function openPDf(url) {
+            window.localStorage.removeItem("pdfUrl");
+            window.localStorage.setItem("pdfUrl", url);
+            const {
+                BrowserWindow
+            } = require('electron').remote
+            var remote = require('electron').remote;
+            var currentWindow = remote.getCurrentWindow();
+            const win = new BrowserWindow({
+                width: 1600,
+                height: 900,
+                parent: currentWindow
+            })
+            win.setMenu(null);
+            win.loadFile('viewer.html')
+        }
+
+        function download(id) {
+            lstBooks = JSON.parse(window.localStorage.getItem("lstBooks")) || [];
+
+            var filtered = lstBooks.filter(function(value) {
+                return value == id;
             });
-   </script>
+
+            if (filtered.length > 0) {
+                alert("Book is already in demos.");
+            } else {
+                lstBooks.push(id.toString());
+                window.localStorage.setItem("lstBooks", JSON.stringify(lstBooks));
+                alert("Books successfully downloaded.");
+            }
+        }
+    </script>
 
     <script>
         if (window.module) module = window.module;
