--- a/authorlist.html
+++ b/authorlist.html
@@ -16,163 +16,7 @@
 </head>
 
 <body class="theme-light-blue">
-    <div class="page-loader-wrapper">
-        <div class="loader">
-            <div class="preloader">
-                <div class="spinner-layer pl-light-blue">
-                    <div class="circle-clipper left">
-                        <div class="circle"></div>
-                    </div>
-                    <div class="circle-clipper right">
-                        <div class="circle"></div>
-                    </div>
-                </div>
-            </div>
-            <p>Please wait...</p>
-        </div>
-    </div>
-    <div class="overlay"></div>
-    <div class="search-bar">
-        <div class="search-icon">
-            <i class="material-icons">search</i>
-        </div>
-        <input type="text" placeholder="Search Titles & Authors">
-        <div class="close-search">
-            <i class="material-icons">close</i>
-        </div>
-    </div>
-    <nav class="navbar">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a href="#" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"></a>
-                <a href="#" class="bars"></a>
-                <a href="#" class="lnkHome"><img src="logo.png" alt="Logo" /></a>
-            </div>
-            <div class="collapse navbar-collapse" id="navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#" style="font-size: 24px; font-weight: bolder;">BYGOZ E-LEARNING PRIVATE LIMITED</a>
-                    </li>
-                    <li>
-                        <a href="#" class="lnkHome" data-close="true">
-                            <i class="material-icons">home</i>
-                        </a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#" class="lnkLogin">
-                            <i class="material-icons">shopping_cart</i>
-                            <span>Bygoz Store</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <section>
-        <aside id="leftsidebar" class="sidebar">
-            <div class="menu">
-                <ul class="list">
-                    <li>
-                        <a href="#" class="lnkHome">
-                            <i class="material-icons">home</i>
-                            <span>HOME</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkLibrary">
-                            <i class="material-icons">account_balance</i>
-                            <span>LIBRARY</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkStore">
-                            <i class="material-icons">store</i>
-                            <span>STORE</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkPurchase">
-                            <i class="material-icons">attach_money</i>
-                            <span>PURCHASE</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkCart">
-                            <i class="material-icons">add_shopping_cart</i>
-                            <span>CART</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="" class="">
-                            <i class="material-icons">contacts</i>
-                            <span>AUTHORS</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkFavouriteBooks">
-                            <i class="material-icons">bookmarks</i>
-                            <span>FAVOURITE BOOK</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkTranscationHistory">
-                            <i class="material-icons">account_balance_wallet</i>
-                            <span>TRANSCATION HISTORY</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkMyProfile">
-                            <i class="material-icons">account_box</i>
-                            <span>MY PROFILE</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkChangePassword">
-                            <i class="material-icons">settings_applications</i>
-                            <span>CHANGE PASSWORD</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkSellWithUs">
-                            <i class="material-icons">shopping_cart</i>
-                            <span>SELL WITH US</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkLogout">
-                            <i class="material-icons">lock</i>
-                            <span>LOGOUT</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-                </ul>
-            </div>
-        </aside>
-    </section>
+    <div class="masterPage"> </div>
     <section class="content">
         <div class="container-fluid">
 
@@ -201,7 +45,7 @@
 
     <script>
         var lstBooks = [];
-        var authors=[];
+        var authors = [];
         $(function() {
             var macaddress = require('macaddress');
             macaddress.one(function(err, mac) {
@@ -209,7 +53,7 @@
             });
 
             $.get(apiUrl + "author_list", function(data) {
-                if (data.status === true) { 
+                if (data.status === true) {
                     // Top Newest Books
                     var strBestAuthors = '';
                     var arrBestAuthors = data.data;
@@ -217,29 +61,29 @@
                     strBestAuthors = '<div class="card"><div class="body"><div class="row"><div class="col-md-12">';
                     strBestAuthors = strBestAuthors + '<h4 style="color: #03A9F4;">Best Authors</h4></div>';
 
-                    for (i = 0; i < arrBestAuthors.length; i++) {  
+                    for (i = 0; i < arrBestAuthors.length; i++) {
                         strBestAuthors = strBestAuthors + '<div class="col-md-3" style="text-align:center"><div class="thumbnail">';
                         strBestAuthors = strBestAuthors + '<img src="' + imageUrl + arrBestAuthors[i].image + '" style="height: 150px;width: 150px;margin-top:1em" />';
                         strBestAuthors = strBestAuthors + '<div class="caption">';
                         strBestAuthors = strBestAuthors + '<h3>' + arrBestAuthors[i].name + '</h3>';
 
-                        strBestAuthors = strBestAuthors + ' <button onclick="viewBarberDetail('+arrBestAuthors[i].author_id+')" class="btn btn-primary">View Detail</button></p>';
+                        strBestAuthors = strBestAuthors + ' <button onclick="viewBarberDetail(' + arrBestAuthors[i].author_id + ')" class="btn btn-primary">View Detail</button></p>';
                         strBestAuthors = strBestAuthors + '</div></div></div>';
                     }
 
                     strBestAuthors = strBestAuthors + '</div></div></div>';
-                    $(".bindDashboardData").append(strBestAuthors); 
+                    $(".bindDashboardData").append(strBestAuthors);
                 }
             });
         });
- 
-        function viewBarberDetail(authorid) { 
-          var author=  authors.filter((author)=>{
+
+        function viewBarberDetail(authorid) {
+            var author = authors.filter((author) => {
                 return author.author_id == authorid
             });
-            window.localStorage.setItem("authorData",JSON.stringify(author[0]));
+            window.localStorage.setItem("authorData", JSON.stringify(author[0]));
             window.location.href = "authordetail.html";
-        }  
+        }
     </script>
 
     <script>
