--- a/bookdetail.html
+++ b/bookdetail.html
@@ -16,163 +16,7 @@
 </head>
 
 <body class="theme-light-blue">
-    <div class="page-loader-wrapper">
-        <div class="loader">
-            <div class="preloader">
-                <div class="spinner-layer pl-light-blue">
-                    <div class="circle-clipper left">
-                        <div class="circle"></div>
-                    </div>
-                    <div class="circle-clipper right">
-                        <div class="circle"></div>
-                    </div>
-                </div>
-            </div>
-            <p>Please wait...</p>
-        </div>
-    </div>
-    <div class="overlay"></div>
-    <div class="search-bar">
-        <div class="search-icon">
-            <i class="material-icons">search</i>
-        </div>
-        <input type="text" placeholder="Search Titles & Authors">
-        <div class="close-search">
-            <i class="material-icons">close</i>
-        </div>
-    </div>
-    <nav class="navbar">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a href="#" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"></a>
-                <a href="#" class="bars"></a>
-                <a href="#" class="lnkHome"><img src="logo.png" alt="Logo" /></a>
-            </div>
-            <div class="collapse navbar-collapse" id="navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#" style="font-size: 24px; font-weight: bolder;">BYGOZ E-LEARNING PRIVATE LIMITED</a>
-                    </li>
-                    <li>
-                        <a href="#" class="lnkHome" data-close="true">
-                            <i class="material-icons">home</i>
-                        </a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#" class="lnkLogin">
-                            <i class="material-icons">shopping_cart</i>
-                            <span>Bygoz Store</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <section>
-        <aside id="leftsidebar" class="sidebar">
-            <div class="menu">
-                <ul class="list">
-                    <li>
-                        <a href="#" class="lnkHome">
-                            <i class="material-icons">home</i>
-                            <span>HOME</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkLibrary">
-                            <i class="material-icons">account_balance</i>
-                            <span>LIBRARY</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkStore">
-                            <i class="material-icons">store</i>
-                            <span>STORE</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkPurchase">
-                            <i class="material-icons">attach_money</i>
-                            <span>PURCHASE</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkCart">
-                            <i class="material-icons">add_shopping_cart</i>
-                            <span>CART</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkAuthors">
-                            <i class="material-icons">contacts</i>
-                            <span>AUTHORS</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkFavouriteBooks">
-                            <i class="material-icons">bookmarks</i>
-                            <span>FAVOURITE BOOK</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkTranscationHistory">
-                            <i class="material-icons">account_balance_wallet</i>
-                            <span>TRANSCATION HISTORY</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkMyProfile">
-                            <i class="material-icons">account_box</i>
-                            <span>MY PROFILE</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkChangePassword">
-                            <i class="material-icons">settings_applications</i>
-                            <span>CHANGE PASSWORD</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkSellWithUs">
-                            <i class="material-icons">shopping_cart</i>
-                            <span>SELL WITH US</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-
-                    <li>
-                        <a href="#" class="lnkLogout">
-                            <i class="material-icons">lock</i>
-                            <span>LOGOUT</span>
-                        </a>
-                        <hr style="margin-bottom: 0; margin-top: 0;" />
-                    </li>
-                </ul>
-            </div>
-        </aside>
-    </section>
+    <div class="masterPage"> </div>
     <section class="content">
         <div class="container-fluid">
 
@@ -180,7 +24,7 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="body">
-                            <div class="row" id="loadBookDetail">
+                            <div class="row bindBookDetail">
 
                             </div>
                         </div>
@@ -206,6 +50,65 @@
     <script src="THEME/js/custom.js"></script>
 
     <script>
+        $(function() {
+            var bookID = "";
+            if (window.localStorage.getItem("bookID") != null) {
+                bookID = window.localStorage.getItem("bookID");
+            }
+
+            $.post(apiUrl + "book_detail", {
+                book_id: bookID
+            }, function(data) {
+                if (data.status === true) {
+                    var strBookDetail = '';
+                    var arrBookDetail = data.book_detail;
+                    var arrAuthorDetail = data.author_detail;
+                    var arrCheckMark = data.check_mark;
+                    var mainPrice = Number(arrBookDetail[0].unit_price);
+                    var discount = Number(arrBookDetail[0].discount);
+
+                    if (discount == 0) {
+                        strPrice = '<h4>&#8377; ' + mainPrice + '</h4><br />'
+                    }
+                    if (discount > 0) {
+                        var discPrice = mainPrice - ((mainPrice * discount) / 100);
+                        strPrice = '<h4>&#8377; ' + discPrice + ' &nbsp;&nbsp;&nbsp; <strike>&#8377; ' + mainPrice + '</strike> &nbsp;&nbsp;&nbsp; <span style="color: maroon;">(' + discount + '% off)</span></h4><br />'
+                    }
+
+                    strBookDetail = '<div class="col-md-4">';
+                    strBookDetail = strBookDetail + '<img src="' + frontCoverUrl + arrBookDetail[0].front_cover + '" style="height: 550px; width: 350px;" />';
+                    strBookDetail = strBookDetail + '</div>';
+
+                    strBookDetail = strBookDetail + '<div class="col-md-8">';
+                    strBookDetail = strBookDetail + '<h2>' + arrBookDetail[0].name + '</h2>';
+                    strBookDetail = strBookDetail + '<p class="description">by ' + arrAuthorDetail.name + '</p><br />';
+                    strBookDetail = strBookDetail + '<p class="description"><label>Description:</label><br /> ' + arrBookDetail[0].description + '</p><br />';
+                    strBookDetail = strBookDetail + strPrice;
+                    strBookDetail = strBookDetail + '<button class="btn btn-primary"> Checkout </button> <button class="btn btn-warning"> Add to Cart </button>';
+                    strBookDetail = strBookDetail + '<hr style="border: 1px solid #03A9F4;">';
+                    strBookDetail = strBookDetail + '<label style="color: maroon;">Product Information</label>';
+                    strBookDetail = strBookDetail + '<table class="table">';
+                    for (i = 0; i < arrCheckMark.length; i++) {
+                        var status = "NO";
+                        if (arrCheckMark[i].status == "1") {
+                            status = "YES";
+                        }
+                        strBookDetail = strBookDetail + '<tr><th>' + arrCheckMark[i].label + ' : </th><td>' + status + '</td></tr>';
+                    }
+
+                    strBookDetail = strBookDetail + '<tr><th> Format : </th><td>' + arrBookDetail[0].format + '</td></tr>';
+                    strBookDetail = strBookDetail + '<tr><th> Category : </th><td>' + arrBookDetail[0].category_name + '</td></tr>';
+                    strBookDetail = strBookDetail + '<tr><th> Sub Category : </th><td>' + arrBookDetail[0].subcategory_name + '</td></tr>';
+                    strBookDetail = strBookDetail + '<tr><th> Language : </th><td>' + arrBookDetail[0].language + '</td></tr>';
+                    strBookDetail = strBookDetail + '<tr><th> Publisher : </th><td>' + arrBookDetail[0].publisher + '</td></tr>';
+                    strBookDetail = strBookDetail + '<tr><th> Publish Date : </th><td>' + arrBookDetail[0].date_of_publication + '</td></tr>';
+                    strBookDetail = strBookDetail + '</table>';
+                    strBookDetail = strBookDetail + '</div>';
+
+                    $(".bindBookDetail").append(strBookDetail);
+                }
+            });
+        });
     </script>
 
     <script>
