--- a/login.html
+++ b/login.html
@@ -6,8 +6,7 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <title>BYGOZ E-LEARNING PRIVATE LIMITED</title>
     <link rel="icon" href="THEME/favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,cyrillic-ext" rel="stylesheet"
-        type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,cyrillic-ext" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
     <link href="THEME/plugins/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="THEME/plugins/node-waves/waves.css" rel="stylesheet" />
@@ -45,10 +44,9 @@
     <nav class="navbar">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#navbar-collapse" aria-expanded="false"></a>
+                <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"></a>
                 <a href="javascript:void(0);" class="bars"></a>
-                <a href="#" class="lnkHome"><img src="logo.png" alt="Logo" /></a>
+                <a href="main.html" class="lnkHome"><img src="logo.png" alt="Logo" /></a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -56,19 +54,14 @@
                         <a href="#" style="font-size: 24px; font-weight: bolder;">BYGOZ E-LEARNING PRIVATE LIMITED</a>
                     </li>
                     <li>
-                        <a href="#" class="lnkHome" data-close="true">
+                        <a href="main.html" class="lnkHome" data-close="true">
                             <i class="material-icons">home</i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="javascript:void(0);" class="js-search" data-close="true">
-                            <i class="material-icons">search</i>
                         </a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#" class="lnkLogin">
+                        <a href="login.html" class="lnkLogin">
                             <i class="material-icons">shopping_cart</i>
                             <span>Bygoz Store</span>
                         </a>
@@ -90,14 +83,11 @@
                                         <h4>Login to your account</h4>
                                         <br />
                                         <form action="#">
-                                            <input type="text" id="txtUsername" class="form-control"
-                                                placeholder="Username *" />
+                                            <input type="text" id="txtUsername" class="form-control" placeholder="Username *" />
                                             <br />
-                                            <input type="password" id="txtPassword" class="form-control"
-                                                placeholder="Password *" />
+                                            <input type="password" id="txtPassword" class="form-control" placeholder="Password *" />
                                             <br />
-                                            <button type="submit" id="btnLogin" class="btn btn-success"
-                                                style="width: 100%;">SIGN IN</button>
+                                            <button type="submit" id="btnLogin" class="btn btn-success" style="width: 100%;">SIGN IN</button>
                                             <br /><br />
                                             <a href="#" id="aSignUp">Sign up</a>
                                             <a href="#" id="aForgotPassword" style="float: right;">Forgot Password</a>
@@ -112,7 +102,12 @@
 
         </div>
     </section>
-    <script>if (typeof module === 'object') { window.module = module; module = undefined; }</script>
+    <script>
+        if (typeof module === 'object') {
+            window.module = module;
+            module = undefined;
+        }
+    </script>
     <script src="THEME/plugins/jquery/jquery.min.js"></script>
     <script src="THEME/plugins/bootstrap/js/bootstrap.js"></script>
     <script src="THEME/plugins/bootstrap-select/js/bootstrap-select.js"></script>
@@ -122,30 +117,30 @@
     <script src="THEME/js/demo.js"></script>
     <script src="THEME/js/custom.js"></script>
     <script>
-        $(document).ready(function () {
+        $(document).ready(function() {
             var getMacAddress = '';
             if (window.localStorage.getItem("getMacAddress") != null) {
                 getMacAddress = window.localStorage.getItem("getMacAddress");
             }
             console.log(getMacAddress)
 
-            $("#aSignUp").click(function (e) {
+            $("#aSignUp").click(function(e) {
                 e.preventDefault();
                 window.location.href = "register.html";
             });
 
-            $("#aForgotPassword").click(function (e) {
+            $("#aForgotPassword").click(function(e) {
                 e.preventDefault();
                 window.location.href = "forgotpassword.html";
             });
 
-            $("#btnLogin").click(function (e) {
+            $("#btnLogin").click(function(e) {
                 e.preventDefault();
 
                 if ($("#txtUsername").val() != "" && $("#txtUsername").val() != null && $("#txtUsername").val() != undefined && $("#txtPassword").val() != "" && $("#txtPassword").val() != null && $("#txtPassword").val() != undefined) {
                     // $.post(apiUrl + "login", { "device_id": getMacAddress, "email": $("#txtUsername").val(), "password": $("#txtPassword").val() }, function (data) {
                     //     if (data.status === true) {
-                            
+
                     //     }
                     //     else {
                     //         alert(data.message);
@@ -160,14 +155,15 @@
                     // else {
                     //     alert('Username or password are wrong.');
                     // }
-                }
-                else {
+                } else {
                     alert('Please enter username and password.');
                 }
             });
         });
     </script>
-    <script>if (window.module) module = window.module;</script>
+    <script>
+        if (window.module) module = window.module;
+    </script>
 </body>
 
 </html>
