--- a/videoplayer.html
+++ b/videoplayer.html
@@ -6,168 +6,17 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <title>BYGOZ E-LEARNING PRIVATE LIMITED</title>
     <link rel="icon" href="THEME/favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,cyrillic-ext" rel="stylesheet"
-        type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,cyrillic-ext" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
     <link href="THEME/plugins/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="THEME/plugins/node-waves/waves.css" rel="stylesheet" />
     <link href="THEME/plugins/animate-css/animate.css" rel="stylesheet" />
     <link href="THEME/css/style.css" rel="stylesheet">
     <link href="THEME/css/themes/all-themes.css" rel="stylesheet" />
-    <style>
-        .sidebar .menu .list .zeroMenu::before {
-            content: '0' !important;
-        }
-
-        .mainmenu {
-            float: left;
-            margin-bottom: 2%;
-            margin-left: 2%;
-        }
-
-        .dropdown-submenu {
-            position: relative;
-        }
-
-        .dropdown-submenu .dropdown-menu {
-            top: 0;
-            left: 100%;
-            margin-top: -1px;
-        }
-    </style>
 </head>
 
 <body class="theme-light-blue">
-    <div class="page-loader-wrapper">
-        <div class="loader">
-            <div class="preloader">
-                <div class="spinner-layer pl-light-blue">
-                    <div class="circle-clipper left">
-                        <div class="circle"></div>
-                    </div>
-                    <div class="circle-clipper right">
-                        <div class="circle"></div>
-                    </div>
-                </div>
-            </div>
-            <p>Please wait...</p>
-        </div>
-    </div>
-    <div class="overlay"></div>
-    <div class="search-bar">
-        <div class="search-icon">
-            <i class="material-icons">search</i>
-        </div>
-        <input type="text" placeholder="Search Titles & Authors">
-        <div class="close-search">
-            <i class="material-icons">close</i>
-        </div>
-    </div>
-    <nav class="navbar">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#navbar-collapse" aria-expanded="false"></a>
-                <a href="javascript:void(0);" class="bars"></a>
-                <a href="#" class="aLogo"><img src="logo.png" alt="Logo" /></a>
-            </div>
-            <div class="collapse navbar-collapse" id="navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#" style="font-size: 24px; font-weight: bolder;">BYGOZ E-LEARNING PRIVATE LIMITED</a>
-                    </li>
-                    <li>
-                        <a href="#" class="aLogo" data-close="true">
-                            <i class="material-icons">home</i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="javascript:void(0);" class="js-search" data-close="true">
-                            <i class="material-icons">search</i>
-                        </a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#" id="mLogin">
-                            <i class="material-icons">shopping_cart</i>
-                            <span>Bygoz Store</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <section>
-        <aside id="leftsidebar" class="sidebar">
-            <div class="menu">
-                <ul class="list">
-                    <li class="header">
-                        <i class="material-icons">book</i>
-                        <big>
-                            <big>
-                                <big>
-                                    <big>
-                                        <big>
-                                            <b>Library</b>
-                                        </big>
-                                    </big>
-                                </big>
-                            </big>
-                        </big>
-                        <i class="material-icons pull-right">refresh</i>
-                    </li>
-                    <li>
-                        <a href="#" class="" id="aAll">
-                            <span>All</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="" id="aBuy">
-                            <span>Purchase</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="" id="aSample">
-                            <span>Demo eBooks</span>
-                        </a>
-                    </li>
-                    <li class="header">
-                        <i class="material-icons">list</i>
-                        <big>
-                            <big>
-                                <big>
-                                    <big>
-                                        <big>
-                                            <b>Collections</b>
-                                        </big>
-                                    </big>
-                                </big>
-                            </big>
-                        </big>
-                        <i class="material-icons pull-right">swap_vert</i>
-                        <i class="material-icons pull-right">add</i>
-                    </li>
-                    <li>
-                        <div class="input-group" style="padding: 5%;">
-                            <span class="input-group-addon">
-                                <i class="material-icons">search</i>
-                            </span>
-                            <div class="form-line">
-                                <input type="text" class="form-control" placeholder="Search Collection Name" />
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="legal">
-                <div class="copyright">
-                    &copy; 2019
-                    <a href="#">Bygoz e-Learning Private Limited</a>.
-                </div>
-            </div>
-        </aside>
-    </section>
+    <div class="masterPage"> </div>
     <section class="content">
         <div class="container-fluid">
 
@@ -185,7 +34,12 @@
 
         </div>
     </section>
-    <script>if (typeof module === 'object') { window.module = module; module = undefined; }</script>
+    <script>
+        if (typeof module === 'object') {
+            window.module = module;
+            module = undefined;
+        }
+    </script>
     <script src="THEME/plugins/jquery/jquery.min.js"></script>
     <script src="THEME/plugins/bootstrap/js/bootstrap.js"></script>
     <script src="THEME/plugins/bootstrap-select/js/bootstrap-select.js"></script>
@@ -195,15 +49,7 @@
     <script src="THEME/js/demo.js"></script>
     <script src="THEME/js/custom.js"></script>
     <script>
-        const electron = require('electron');
-        const { ipcRenderer } = electron;
-        var macaddress = require('macaddress');
-
-        macaddress.one(function (err, mac) {
-            console.log(mac);
-        });
-
-        $(function () {
+        $(function() {
             var linkURL = '';
 
             if (window.localStorage.getItem("linkURL") != null) {
@@ -212,28 +58,10 @@
 
             $("#loadVideo").html('<video controls="controls" src="' + linkURL + '" style="width: 100%;"></video>')
         });
-
-        $(document).ready(function () {
-            $('#aAll').click(function (e) {
-                e.preventDefault();
-
-                window.location.href = "main.html";
-            });
-
-            $('#aBuy').click(function (e) {
-                e.preventDefault();
-
-                window.location.href = "main.html";
-            });
-
-            $('#aSample').click(function (e) {
-                e.preventDefault();
-
-                window.location.href = "library.html";
-            });
-        });
     </script>
-    <script>if (window.module) module = window.module;</script>
+    <script>
+        if (window.module) module = window.module;
+    </script>
 </body>
 
 </html>
